Подправил метод getPublicEvents для прохождения тестов